--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-tsparticles": "^2.3.3",
+    "tsparticles": "^2.3.4"
   },
   "devDependencies": {
     "eslint": "8.26.0",
