--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
     "react-tsparticles": "^2.3.3",
     "tsparticles": "^2.3.4"
   },
