--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,9 @@
     "paths": {
       "src/components/*": ["components/*"],
       "src/styles/*": ["styles/*"],
-      "src/theme/*": ["theme/*"]
+      "src/theme/*": ["theme/*"],
+      "src/redux/*": ["redux/*"],
+      "src/utils/*": ["utils/*"]
     }
   }
 }
