--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/montserrat": "^4.5.13",
+    "@reduxjs/toolkit": "^1.8.6",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
     "react-reveal": "^1.2.2",
     "react-tsparticles": "^2.3.3",
     "tsparticles": "^2.3.4"
